# gstreamer-rockchip

./: configure.ac
gst/: Makefile.am
gst/eglgles/: Makefile.am
gst/rkximage/: ximagesink.c
gst/rockchipmpp/: gstmppdecbufferpool.c  gstmpph264enc.c  gstmppvideodec.c  gstmppvideodec.h  gstmppvideoenc.c  gstmppvideoenc.h
